<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_curved" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rlTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_circle_radius_white">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/weather_reports"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true" />

            </RelativeLayout>

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTopBar"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/IVideo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_play_circle_48" />

                    <TextView
                        android:id="@+id/Videot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_video"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_baseline_privacy_tip_24" />

                    <TextView
                        android:id="@+id/tvPP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDisclaimer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_baseline_article_24" />

                    <TextView
                        android:id="@+id/tvDisclaimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disclaimer"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rellist"
        android:layout_above="@id/adView2"
        android:layout_below="@+id/llMenu">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListArticles"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="80dp"
        android:text="@string/source"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:theme="@style/MaterialTheme"
        app:backgroundTint="@color/colorAccent"
        app:icon="@drawable/ic_play_circle_24"
        app:iconTint="@android:color/white"
        android:layout_alignParentRight="true" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3391452854495231/7646364612">

        </com.google.android.gms.ads.AdView>



</RelativeLayout>